fix navbar wrapping button, adaptive margin and padding, image resize, recipe details layout

--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -8,5 +8,21 @@
   font-family: 'Pacifico', cursive;
   position: relative;
   bottom: 6px;
+  left: 1rem;
   font-size: 2rem;
+}
+.submenu{
+  background-color: #15643B;
+  width: 100%;
+}
+.container-fluid{
+  padding: 0;
+  z-index: 3;
+}
+.navbar-toggler{
+  margin-right: 1rem;
+}
+.nav-item{
+  margin: 0 auto 0 1rem;
+  font-size: 1.2rem;
 }
